# terminator

./: .gitignore  CHEATSHEET.md  Cargo.toml  NEXT_STEPS.md  todo
helix-core/: Cargo.toml
helix-opencode/: Cargo.toml
helix-opencode/src/: client.rs  error.rs  server.rs  types.rs
helix-term/: Cargo.toml
helix-term/src/: commands.rs
helix-term/src/commands/: typed.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: agent_overlay.rs  blame.rs  diff_view.rs  mod.rs  permission_view.rs  picker.rs
helix-term/src/ui/picker/: handlers.rs
helix-vcs/src/: git.rs  lib.rs  status.rs
helix-vcs/src/git/: commit_test.rs  test.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs
