[package]
name = "helix-opencode"
description = "OpenCode AI agent integration for Helix editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "time", "sync"] }
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
log = "0.4"
anyhow = "1"
